# ztp-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerignore  README.md  fly.toml  mise.toml  sqlx.toml
.config/: lefthook.toml  mise.toml
.sqlpkg/nalgeon/uuid/: sqlpkg.json
.sqlx/: query-7de1b87839268fdf9bedd6559288f8f4f05722487186c61c65636c375448efdd.json  query-b20308091f9773505ad85af1b8397805cffef5973317e43806608807534064f7.json  query-d78a48c4afed6d074a5b0be0a9c42d0de297e7128d39576c27ab86ebb3f2f278.json
configuration/: base.toml
migrations/: 20250928044436_create_subscriptions_table.sql
mise-tasks/db/: init.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
