[package]
name = "ztp"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
bunyan = "0.1.9"
chrono = "0.4.42"
config = "0.15.17"
reqwest = "0.12.23"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
uuid = { version = "1.18.1", features = ["v7"] }

[dependencies.sqlx]
version = "0.9.0-alpha.1"
features = [
    "sqlite",
    "chrono",
    "macros",
    "runtime-tokio",
    "sqlx-toml",
    "uuid"
]
